# Prologue

./: .gitignore  .mcp.json  README.md  index.html  package-lock.json  package.json  solo.yml  vite.config.ts
.claude/skills/prologue-design/: HANDOFF.md  SKILL.md  readme.md  styles.css
.claude/skills/prologue-design/components/comments/: CommentCard.d.ts  CommentCard.jsx  CommentCard.prompt.md  CommentComposer.d.ts  CommentComposer.jsx  CommentComposer.prompt.md  CommentThread.d.ts  CommentThread.jsx  CommentThread.prompt.md  comments.card.html
.claude/skills/prologue-design/components/core/: Button.d.ts  Button.jsx  Button.prompt.md  CountPill.d.ts  CountPill.jsx  CountPill.prompt.md  DiffCounts.d.ts  DiffCounts.jsx  DiffCounts.prompt.md  ModeToggle.d.ts  ModeToggle.jsx  ModeToggle.prompt.md  Select.d.ts  Select.jsx  Select.prompt.md  StatePill.d.ts  StatePill.jsx  StatePill.prompt.md  StatusBadge.d.ts  StatusBadge.jsx  StatusBadge.prompt.md  TitleBar.d.ts  TitleBar.jsx  TitleBar.prompt.md  Toast.d.ts  Toast.jsx  Toast.prompt.md  core.card.html
.claude/skills/prologue-design/components/diff/: DiffLine.d.ts  DiffLine.jsx  DiffLine.prompt.md  ExpandRow.d.ts  ExpandRow.jsx  ExpandRow.prompt.md  FileCardHeader.d.ts  FileCardHeader.jsx  FileCardHeader.prompt.md  FileRow.d.ts  FileRow.jsx  FileRow.prompt.md  HunkHeader.d.ts  HunkHeader.jsx  HunkHeader.prompt.md  diff.card.html
.claude/skills/prologue-design/guidelines/: brand-mark.card.html  colors-brand.card.html  colors-diff.card.html  colors-semantic.card.html  colors-surfaces.card.html  glyphs.card.html  radii.card.html  spacing.card.html  type-mono.card.html  type-sans.card.html  type-serif.card.html
.claude/skills/prologue-design/tokens/: colors.css  fonts.css  spacing.css  typography.css
.claude/skills/prologue-design/ui_kits/prologue/: README.md  app.js  index.html
.claude/skills/prologue-review/: SKILL.md
.claude/skills/release-notes/: SKILL.md
scripts/: build-sidecar.sh  release.sh
src/: App.css  App.tsx  ipc.test.ts  ipc.ts  main.tsx  recents.test.ts  recents.ts  release-notes.json  types.test.ts  types.ts  updater.ts  useTauriEvent.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.mcp-bridge.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prologue/: Cargo.toml
src-tauri/prologue-core/: Cargo.toml
src-tauri/prologue-core/src/: anchor.rs  comment.rs  db.rs  diff.rs  error.rs  export.rs  guide.rs  intraline.rs  lib.rs  repo.rs  review.rs  testutil.rs  ts_export.rs
src-tauri/prologue/src/: db.rs  guide.rs  main.rs  resolve.rs  show.rs
src-tauri/prologue/tests/: cli.rs
src-tauri/src/: anchor.rs  cli_install.rs  commands.rs  db.rs  diff.rs  events.rs  export.rs  guide_engine.rs  lib.rs  main.rs  repo.rs  review.rs  testutil.rs  watcher.rs
src/components/: ArchivedReviews.tsx  BranchSelect.tsx  Chevron.tsx  Comments.tsx  DiffView.tsx  ExportMenu.tsx  FileJump.tsx  FileList.tsx  GuideMenu.tsx  MarkdownPreview.test.tsx  MarkdownPreview.tsx  ModeToggle.tsx  OrphanedComments.tsx  ReviewCommentsPanel.tsx  ReviewShell.tsx  ShortcutHelp.tsx  TitleBar.tsx  WelcomePage.tsx  WhatsNew.tsx  WhitespaceToggle.tsx  useCommentMutations.ts  useCopyPath.ts  useGuide.ts  useResizableSidebar.test.ts  useResizableSidebar.ts  useReviewDerived.ts  useReviewSession.ts
src/diff/: fileMatch.test.ts  fileMatch.ts  guards.test.ts  guards.ts  guideOrder.test.ts  guideOrder.ts  guideStale.test.ts  guideStale.ts  inlineCode.test.ts  inlineCode.ts  keyboardNav.test.ts  keyboardNav.ts  markers.test.ts  markers.ts  rows.test.ts  rows.ts  segments.test.ts  segments.ts
src/highlight/: grammars.ts  lang.test.ts  lang.ts  shiki.ts
