[workspace]
members = ["prologue-core", "prologue"]
# Unqualified `cargo test` / `cargo clippy` from src-tauri (e.g. the Solo
# "Rust Checks" process) must cover every crate, not just the root package.
default-members = [".", "prologue-core", "prologue"]

[package]
name = "prologue-app"
version = "0.1.0"
description = "Prologue — a local git diff review app"
authors = ["Skyler Katz"]
edition = "2021"
# The workspace has a second binary (prologue, the CLI); `tauri dev`'s bare
# `cargo run` needs to know this one is the app.
default-run = "Prologue"

# macOS shows the executable's file name in the Dock for unbundled dev builds,
# so the bin target must carry the user-facing name, not the crate name.
[[bin]]
name = "Prologue"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prologue_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
prologue-core = { path = "prologue-core" }
serde = { version = "1", features = ["derive"] }
# Guide engine: parse the `claude -p --output-format json` result envelope.
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
# Dev-only agent automation bridge; compiled in only via the `mcp-bridge`
# feature (see [features]) so release builds carry no WebSocket listener.
tauri-plugin-mcp-bridge = { version = "0.12", optional = true }
notify = "8.2.0"

[features]
# Enabled by `tauri dev --features mcp-bridge` (see solo.yml); never enabled
# for release builds.
mcp-bridge = ["dep:tauri-plugin-mcp-bridge"]

[dev-dependencies]
tempfile = "3"
# FixtureRepo for the watcher's ignore-filter tests; the testutil feature
# only ever ships in test builds.
prologue-core = { path = "prologue-core", features = ["testutil"] }
