[package]
name = "prologue-core"
version = "0.1.0"
description = "Review, diff, and persistence core shared by the Prologue app and CLI"
edition = "2021"

[dependencies]
git2 = "0.20"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Exposes the git fixture helpers (`testutil` module) to sibling crates'
# tests; never enabled in normal builds.
testutil = ["dep:tempfile"]
