[package]
name = "prologue"
version = "0.1.0"
description = "Command-line access to Prologue (Diff Viewer) code reviews"
edition = "2021"

[dependencies]
prologue-core = { path = "../prologue-core" }
clap = { version = "4", features = ["derive", "env"] }
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
prologue-core = { path = "../prologue-core", features = ["testutil"] }
tempfile = "3"
