[package]
name = "prologue"
version = "0.1.0"
description = "Command-line access to Prologue code reviews"
edition = "2021"

[dependencies]
prologue-core = { path = "../prologue-core" }
clap = { version = "4", features = ["derive", "env"] }
# default-features off: local repo access only (see prologue-core).
git2 = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
prologue-core = { path = "../prologue-core", features = ["testutil"] }
tempfile = "3"
